--- a/Lessons/FirstWebsite/templates/about.html
+++ b/Lessons/FirstWebsite/templates/about.html
@@ -39,7 +39,7 @@
 <div class="header header-fixed unselectable header-animated">
     <div class="header-brand">
         <div class="nav-item no-hover">
-            <h6 class="title">Bernard's First Website</h6>
+            <a href="/"><h6 class="title">Bernard's First Website</h6></a>
         </div>
         <div class="nav-item nav-btn" id="header-btn"><span></span> <span></span> <span></span></div>
     </div>
@@ -66,25 +66,24 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="card-image">
-                            <img src="IMG_1419.jpeg" alt="Your Picture">
+                            <img src="https://raw.githubusercontent.com/Bernard-LTW/unit4_repo/main/Lessons/FirstWebsite/templates/IMG_1419.jpeg" alt="Your Picture">
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="card-text">
                             <h1 class="font-size-xxxl mt-5">About Me</h1>
                             <hr>
-                            <p class="font-size-lg">Hello, my name is [Your Name]. I am a [Your Profession] based in
-                                [Your City, State/Country].</p>
+                            <p class="font-size-lg">Hello, my name is Bernard Lee.
+                                I am a student in UWC ISAK Japan.</p>
                             <p class="font-size-lg">If you have any questions or would like to get in touch with me,
-                                feel free to send me an email at <a href="mailto:youremail@example.com">youremail@example.com</a>.
+                                feel free to send me an email at <a href="mailto:2024.bernard.lee@uwcisak.jp">2024.bernard.lee@uwcisak.jp</a>.
                             </p>
-                            <p class="font-size-lg">You can also find me on <a href="[Your Social Media Link]"
-                                                                               class="text-blue-500">[Social Media
-                                Platform]</a>.</p>
+                            <p class="font-size-lg">You can also find me on <a href="https://www.instagram.com/bernard_0501/"
+                                                                               class="text-blue-500">Instagram</a>.</p>
                             <section class="section u-flex u-flex-column u-flex-center u-flex-middle">
                                 <div class="row">
                                     <div class="col-12 text-center">
-                                        <button class="text-blue-600 bg-blue-100 btn--xl">Contact me</button>
+                                        <button class="text-blue-600 bg-blue-100 btn--xl">Hello!</button>
                                     </div>
                                 </div>
                             </section>
