--- a/Lessons/FirstWebsite/templates/index.html
+++ b/Lessons/FirstWebsite/templates/index.html
@@ -16,7 +16,7 @@
       <div class="header header-fixed unselectable header-animated">
          <div class="header-brand">
             <div class="nav-item no-hover">
-               <h6 class="title">Bernard's First Website</h6>
+               <a href="/"><h6 class="title">Bernard's First Website</h6></a>
             </div>
             <div class="nav-item nav-btn" id="header-btn"> <span></span> <span></span> <span></span> </div>
          </div>
@@ -44,7 +44,7 @@
                      <section class="section u-flex u-flex-column u-flex-center u-flex-middle">
   						<div class="row">
     					   <div class="col-12 text-center">
-      					      <button class="text-blue-600 bg-blue-100 btn--xl">About me</button>
+      					      <a href="/about"><button class="text-blue-600 bg-blue-100 btn--xl">About me</button></a>
 		    			</div>
 		  			</div>
 			</section>
