--- a/Lessons/FirstWebsite/templates/about.html
+++ b/Lessons/FirstWebsite/templates/about.html
@@ -24,7 +24,7 @@
         }
 
         .card-text {
-            padding: 16px;
+            padding: 16px;cop
             display: flex;
             flex-direction: column;
             justify-content: center;
