--- a/Lessons/FirstWebsite/templates/index.html
+++ b/Lessons/FirstWebsite/templates/index.html
@@ -29,6 +29,7 @@
                   <a class="nav-dropdown-link">Menu</a>
                   <ul class="dropdown-menu dropdown-animated" role="menu">
                      <li role="menu-item"><a href="/about">About</a></li>
+                        <li role="menu-item"><a href="/request_example">Request Example</a></li>
                   </ul>
                </div>
             </div>
