--- a/Lessons/FirstWebsite/templates/index.html
+++ b/Lessons/FirstWebsite/templates/index.html
@@ -56,7 +56,7 @@
       </section>
    <div class="footer">
       <div class="content">
-         <p>Powered by Flask and Cirrus</a></p>
+         <p>Powered by Flask and Cirrus. Hahah i dont even use it anymore!</a></p>
         </div>
     </div>
    </body>
